removed width css from container in Stories and App component to fix overflow in the x-axis

--- a/client/src/components/Stories/Stories.module.css
+++ b/client/src/components/Stories/Stories.module.css
@@ -1,7 +1,6 @@
 .Container {
   background-color: #24292e;
   min-height: 100vh;
-  width: 100vw;
 }
 
 .StoriesFlexBox {
