--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,6 @@ body {
   background-color: #24292e;
   margin: 0px;
   padding: 0px;
-  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
